--- a/app/src/main/res/layout/browser_content.xml
+++ b/app/src/main/res/layout/browser_content.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    android:id="@+id/content_frame"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="0dp"
-    android:layout_weight="1"
-    android:background="@color/primary_color"
-    android:clipChildren="true"/>
+    android:layout_weight="1">
+
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/primary_color" />
+
+    <com.fillr.browsersdk.FillrToolbarView
+        android:id="@+id/fillrtoolbarview"
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="0dp"
+        android:visibility="invisible" />
+
+</RelativeLayout>
