Integrate with Fillr browser and embedded sdk

--- a/app/src/main/res/xml/preferences_headers.xml
+++ b/app/src/main/res/xml/preferences_headers.xml
@@ -4,6 +4,11 @@
         android:fragment="acr.browser.lightning.fragment.GeneralSettingsFragment"
         android:title="@string/settings_general"/>
     <header
+        android:id="@+id/autofillSettings"
+        android:title="Autofill Settings"
+        android:key="autofillsettings"
+        android:summary="" />
+    <header
         android:fragment="acr.browser.lightning.fragment.BookmarkSettingsFragment"
         android:title="@string/bookmark_settings"/>
     <header
